external-crates/move/crates/move-compiler/tests/move_check/expansion/invalid_unpack_assign_lhs_not_name.exp
error[E02004]: invalid 'module' declaration
  ┌─ tests/move_check/expansion/invalid_unpack_assign_lhs_not_name.move:1:8
  │
1 │ module M {
  │        ^ Invalid module declaration. The module does not have a specified address. Either declare it inside of an 'address <address> {' block or declare it with an address 'module <address>::M''

error[E01002]: unexpected token
  ┌─ tests/move_check/expansion/invalid_unpack_assign_lhs_not_name.move:4:11
  │
4 │         0 { f } = 0;
  │           ^
  │           │
  │           Unexpected '{'
  │           Expected ';'

